# atom.logging

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  convert_case.sh  convert_dir.sh  flake.nix  list.txt
Source/Private/: Logging.cpp
Source/Public/Atom/: Logging.h
Source/Public/Atom/Logging/: Log.h  LogMsg.h  LogTarget.h  Logger.h  LoggerFactory.h  LoggerRegistry.h  NullLogger.h  SimpleLogger.h
Source/Public/Atom/Logging/Internal/: Core.h
Source/Public/Atom/Logging/LogTargets/: ConsoleLogTarget.h  LogTargetBase.h  MultiLogTarget.h
Source/Tests/: TestLog.cpp
cmake/: atom_logging-config.cmake
include/: atom.logging.h
include/atom/logging/: default_logger_manager_impl.h  log_msg.h  log_target.h  log_targets.cppm  logger.h  logger_manager.h  logger_manager_impl.h  null_logger.cppm  null_logger.h  simple_logger.cppm  simple_logger.h
include/atom/logging/log_targets/: basic_log_target.h  console_log_target.cppm  console_log_target.h
sandbox/: sandbox.cpp
source/: atom.logging.cpp  atom.logging.cppm
sources/: atom.logging.cppm  default_logger_manager_impl.cppm  log_msg.cppm  log_target.cppm  log_targets.cppm  logger.cppm  logger_manager.cppm  logger_manager_impl.cppm  null_logger.cppm  simple_logger.cppm
sources/log_targets/: basic_log_target.cppm  console_log_target.cppm
src/: default_logger_manager_impl.cpp  global_log.cpp  log_msg.cpp  log_target.cpp  logger.cpp  logger_errors.cpp  logger_factory.cpp  logger_manager.cpp  logger_manager_impl.cpp  logger_registry.cpp  logging.cpp  null_logger.cpp  simple_logger.cpp
src/atom/: logging.h
src/atom/logging/: Log.h  LogTarget.h  Logger.h  LoggerFactory.h  LoggerRegistry.h  NullLogger.h  SimpleLogger.h  global_log.cpp  log.h  log_msg.cpp  log_msg.h  log_target.cpp  log_target.h  logger.cpp  logger.h  logger_factory.cpp  logger_factory.h  logger_registry.cpp  logger_registry.h  null_logger.cpp  null_logger.h  simple_logger.cpp  simple_logger.h
src/atom/logging/LogTargets/: ConsoleLogTarget.h  LogTargetBase.h  MultiLogTarget.h
src/atom/logging/internal/: core.cpp  core.h
src/atom/logging/log_targets/: console_log_target.cpp  console_log_target.h  log_target_base.h  multi_log_target.cpp  multi_log_target.h
src/log_targets/: basic_log_target.cpp  console_log_target.cpp  multi_log_target.cpp
tests/: log.cpp
